feat(store): add storefront UI with product CRUD
- Create static HTML + vanilla JS UI matching Chaos Controller theme
- Serve HTML at / endpoint, move health check to /health
- Update Helm deployment probes to use /health endpoint
- Full CRUD operations: list, create, edit (modal), delete
- Auto-refresh every 5s, activity logging, XSS protection

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
               value: "postgresql://postgres:{{ .Values.postgres.auth.password }}@{{ .Release.Name }}-postgres-svc:5432/postgres"
           livenessProbe:
             httpGet:
-              path: /
+              path: /health
               port: store
             initialDelaySeconds: 10
             periodSeconds: 10
@@ -54,7 +54,7 @@ spec:
             failureThreshold: 3
           readinessProbe:
             httpGet:
-              path: /
+              path: /health
               port: store
             initialDelaySeconds: 5
             periodSeconds: 5
